--- a/docs/document/LEVEL 2 INTERMEDIATE/Fase 4 Architecture & Design Patterns/4.2 Repository Pattern.md
+++ b/docs/document/LEVEL 2 INTERMEDIATE/Fase 4 Architecture & Design Patterns/4.2 Repository Pattern.md
@@ -1,26 +1,106 @@
-# Repository Pattern
+## **4.2 Repository Pattern** (3 hari) ⭐⭐⭐
 
-## Deskripsi
-Repository pattern digunakan untuk memisahkan logika business dari source data. Anda akan belajar bagaimana mengimplementasikan repository layer untuk manajemen data yang bersih.
-
-## Tujuan Pembelajaran
-- Memahami konsep Repository pattern
-- Memisahkan data source dari business logic
-- Menggunakan repository dalam arsitektur clean
-
-## Materi
-- Konsep Repository pattern
-- Implementasi Repository abstract class/interface
+### **Teknologi Modern:**
+- Repository layer
 - Data source separation
-- Repository dalam konteks MVVM
-- Penghindaran direct API calls in UI
-- Single source of truth
 
-## Waktu
-3 hari
+### **Teknologi yang Ditinggalkan:**
+- Direct API calls in UI
 
-## Prioritas
-⭐⭐⭐ (Clean architecture)
+### **Sub-topik Detail:**
 
-## Catatan
-Repository pattern adalah bagian penting dari clean architecture yang memisahkan sumber data dari logika aplikasi.
+#### 1. Repository Pattern Fundamentals
+- Apa itu Repository Pattern
+- Tujuan dan manfaat Repository
+- Single source of truth principle
+- Abstraction layer untuk data access
+- Repository dalam Clean Architecture
+- Repository vs DAO vs DataSource
+
+#### 2. Repository Structure
+- Interface-based Repository
+- Repository implementation
+- Naming convention (UserRepository, PostRepository)
+- Public methods (suspend functions)
+- Private helper methods
+- Return types (Result, Flow)
+
+#### 3. Data Sources
+- Local data source (Room, DataStore)
+- Remote data source (Retrofit, Ktor)
+- Data source interfaces
+- Data source implementations
+- Separation of concerns per source
+- Cache data source
+
+#### 4. Repository Implementation Strategies
+- **Network-first approach**
+  - Fetch dari API dulu
+  - Fallback ke cache
+  - Use case: Real-time data
+
+- **Cache-first approach**
+  - Baca dari cache dulu
+  - Update dari network
+  - Use case: Offline-first apps
+
+- **Network-bound resource**
+  - Cache dulu untuk UI
+  - Fetch network di background
+  - Update cache dengan data baru
+
+#### 5. Caching Strategy
+- In-memory caching
+- Disk caching dengan Room
+- Cache invalidation
+- Time-based expiration
+- Manual refresh
+- Cache policies
+
+#### 6. Offline-First Architecture
+- Local database as single source
+- Sync dengan remote server
+- Conflict resolution
+- Queue untuk pending operations
+- Background sync workers
+- Online/offline status handling
+
+#### 7. Error Handling
+- Result wrapper class
+- Success vs Error states
+- Network errors (timeout, no connection)
+- API errors (404, 500, etc)
+- Database errors
+- Exception mapping
+- User-friendly error messages
+
+#### 8. Data Transformation
+- Mapping remote entities ke domain models
+- DTO (Data Transfer Objects)
+- Entity mapping functions
+- List transformations
+- Null safety handling
+
+#### 9. Repository with Coroutines
+- Suspend functions di Repository
+- Flow untuk reactive data
+- Async data fetching
+- Exception handling dengan try-catch
+- withContext untuk thread switching
+- Cancellation support
+
+#### 10. Dependency Injection
+- Injecting data sources ke Repository
+- Hilt/Koin setup untuk Repository
+- Repository modules
+- Singleton vs scoped instances
+- Testing dengan fake repositories
+
+#### 11. Hands-on Implementation
+- Build Repository layer
+- Implement multiple data sources
+- Caching mechanism
+- Error handling
+- Unit testing Repository
+
+---
