--- a/docs/document/LEVEL 2 INTERMEDIATE/Fase 4 Architecture & Design Patterns/4.3 Use Cases.md
+++ b/docs/document/LEVEL 2 INTERMEDIATE/Fase 4 Architecture & Design Patterns/4.3 Use Cases.md
@@ -1,26 +1,119 @@
-# Use Cases
+## **4.3 Use Cases** (3 hari) ⭐⭐
 
-## Deskripsi
-Use cases (juga dikenal sebagai Interactors) digunakan untuk memisahkan business logic dari ViewModel. Anda akan belajar bagaimana mengimplementasikan domain layer.
+### **Teknologi Modern:**
+- Domain layer
+- Business logic separation
 
-## Tujuan Pembelajaran
-- Memahami konsep Use Cases
-- Memisahkan business logic dari ViewModel
-- Menggunakan Use Cases dalam arsitektur clean
+### **Teknologi yang Ditinggalkan:**
+- Logic in ViewModel
 
-## Materi
-- Konsep Use Cases/Interactors
-- Implementasi Use Cases
-- Domain layer dalam Clean Architecture
-- Dependency inversion dalam Use Cases
-- Penggantian logic in ViewModel
-- Kapan menggunakan Use Cases
+### **Sub-topik Detail:**
 
-## Waktu
-3 hari
+#### 1. Use Case Fundamentals
+- Apa itu Use Case (Interactor)
+- Peran Use Cases dalam Clean Architecture
+- Use Case dalam Domain Layer
+- Single Responsibility per Use Case
+- Kapan perlu Use Case vs logic di ViewModel
+- Business logic vs presentation logic
 
-## Prioritas
-⭐⭐ (Optional tapi recommended)
+#### 2. Use Case Structure
+- Class-based Use Cases
+- Operator invoke()
+- Input parameters (encapsulation)
+- Output types (Result, Flow)
+- Naming convention (GetUserUseCase, LoginUseCase)
+- One public method per Use Case
 
-## Catatan
-Use Cases adalah opsional tapi direkomendasikan untuk aplikasi dengan business logic kompleks.
+#### 3. Creating Use Cases
+```kotlin
+// Contoh struktur
+class GetUserProfileUseCase(
+    private val userRepository: UserRepository
+) {
+    suspend operator fun invoke(userId: String): Result<UserProfile> {
+        // Business logic here
+    }
+}
+```
+
+#### 4. Use Case Categories
+- **Query Use Cases**: Mendapatkan data (GetXxx)
+- **Command Use Cases**: Mengubah data (UpdateXxx, DeleteXxx)
+- **Validation Use Cases**: Validasi business rules
+- **Calculation Use Cases**: Complex calculations
+- **Transformation Use Cases**: Data transformation
+
+#### 5. Input/Output Models
+- Use Case parameters
+- Domain models (bukan UI models)
+- Result wrappers
+- Success dan Error cases
+- Flow untuk streaming data
+- Nullable vs NonNull returns
+
+#### 6. Business Logic Implementation
+- Complex validations
+- Multi-step operations
+- Orchestrating multiple repositories
+- Business rules enforcement
+- Data processing
+- Calculations dan algorithms
+
+#### 7. Use Cases with Coroutines
+- Suspend functions
+- Flow emissions
+- Sequential vs parallel operations
+- Error handling
+- Cancellation support
+- Timeout handling
+
+#### 8. Combining Multiple Use Cases
+- Use Case composition
+- One Use Case calling another
+- Parallel execution dengan async
+- Sequential operations
+- Transaction management
+
+#### 9. Error Handling
+- Domain-specific exceptions
+- Result sealed classes
+- Mapping repository errors
+- Business rule violations
+- User-facing error messages
+- Retry logic
+
+#### 10. Testing Use Cases
+- Unit testing dengan mocked repositories
+- Testing business logic isolated
+- Happy path testing
+- Error case testing
+- Edge cases
+- MockK atau Mockito
+
+#### 11. Use Cases vs ViewModel
+**Kapan pakai Use Case:**
+- Complex business logic
+- Logic yang reusable
+- Multi-repository coordination
+- Domain rules enforcement
+
+**Kapan logic di ViewModel:**
+- Simple data fetching
+- UI-specific logic
+- Simple transformations
+- Presentation concerns
+
+#### 12. Dependency Injection
+- Injecting repositories ke Use Cases
+- Injecting Use Cases ke ViewModels
+- Hilt modules untuk Use Cases
+- Scoping considerations
+
+#### 13. Hands-on Project
+- Membuat beberapa Use Cases
+- Implement business logic
+- Integration dengan Repository dan ViewModel
+- Unit testing
+
+---
