--- a/docs/document/LEVEL 2 INTERMEDIATE/Fase 5 Networking & API/5.6 Image Loading.md
+++ b/docs/document/LEVEL 2 INTERMEDIATE/Fase 5 Networking & API/5.6 Image Loading.md
@@ -1,27 +1,409 @@
-# Image Loading
+## **5.6 Image Loading** (2 hari) ⭐⭐⭐
 
-## Deskripsi
-Coil adalah library image loading yang dirancang khusus untuk Kotlin dan Compose. Anda akan belajar bagaimana mengimplementasikan loading gambar yang efisien.
+### **Teknologi Modern:**
+- Coil (Compose-first)
 
-## Tujuan Pembelajaran
-- Menggunakan Coil untuk loading gambar
-- Mengimplementasikan caching gambar
-- Mengoptimalkan penggunaan memory untuk gambar
+### **Teknologi yang Ditinggalkan:**
+- Picasso
+- Glide untuk project baru
 
-## Materi
-- Konfigurasi Coil
-- Loading gambar dalam Compose
-- Caching strategies
-- Transformation dan filtering
-- Placeholder dan error images
-- Memory management untuk gambar
-- Pengganti Picasso dan Glide untuk project baru
+### **Sub-topik Detail:**
 
-## Waktu
-2 hari
+#### 1. Image Loading Challenges
+- Image size & memory management
+- Network latency
+- Caching (memory & disk)
+- Image transformations
+- Placeholder & error handling
+- Lifecycle awareness
+- Threading
 
-## Prioritas
-⭐⭐⭐ (Efficient image handling)
+#### 2. Pengenalan Coil
+- Co coroutine Il mage Loader
+- Modern, Kotlin-first
+- Built dengan Kotlin Coroutines
+- Jetpack Compose support
+- Lightweight & fast
+- Automatic memory management
 
-## Catatan
-Coil adalah pilihan terbaik untuk project baru karena optimalisasi khusus untuk Kotlin dan Compose.
+#### 3. Setup Coil
+```kotlin
+dependencies {
+    // Coil for Compose
+    implementation("io.coil-kt:coil-compose:2.5.0")
+    
+    // Coil for Views (optional)
+    implementation("io.coil-kt:coil:2.5.0")
+    
+    // Extensions
+    implementation("io.coil-kt:coil-gif:2.5.0")
+    implementation("io.coil-kt:coil-svg:2.5.0")
+    implementation("io.coil-kt:coil-video:2.5.0")
+}
+```
+
+#### 4. Basic Usage in Compose
+```kotlin
+import coil.compose.AsyncImage
+import coil.compose.rememberAsyncImagePainter
+
+// Simple usage
+@Composable
+fun ProfileImage(imageUrl: String) {
+    AsyncImage(
+        model = imageUrl,
+        contentDescription = "Profile picture",
+        modifier = Modifier.size(100.dp)
+    )
+}
+
+// With more control
+@Composable
+fun ProfileImage(imageUrl: String) {
+    AsyncImage(
+        model = ImageRequest.Builder(LocalContext.current)
+            .data(imageUrl)
+            .crossfade(true)
+            .placeholder(R.drawable.placeholder)
+            .error(R.drawable.error_image)
+            .build(),
+        contentDescription = "Profile picture",
+        contentScale = ContentScale.Crop,
+        modifier = Modifier
+            .size(100.dp)
+            .clip(CircleShape)
+    )
+}
+```
+
+#### 5. Advanced ImageRequest
+```kotlin
+@Composable
+fun AdvancedImage(imageUrl: String) {
+    val context = LocalContext.current
+    
+    AsyncImage(
+        model = ImageRequest.Builder(context)
+            .data(imageUrl)
+            .crossfade(300)
+            .placeholder(R.drawable.placeholder)
+            .error(R.drawable.error)
+            .fallback(R.drawable.fallback)
+            .transformations(
+                CircleCropTransformation(),
+                BlurTransformation(context, 10f)
+            )
+            .size(Size.ORIGINAL) // Don't resize
+            .precision(Precision.EXACT)
+            .diskCachePolicy(CachePolicy.ENABLED)
+            .memoryCachePolicy(CachePolicy.ENABLED)
+            .networkCachePolicy(CachePolicy.ENABLED)
+            .build(),
+        contentDescription = null,
+        modifier = Modifier.fillMaxWidth()
+    )
+}
+```
+
+#### 6. Handling Loading States
+```kotlin
+@Composable
+fun ImageWithStates(imageUrl: String) {
+    var isLoading by remember { mutableStateOf(true) }
+    var isError by remember { mutableStateOf(false) }
+    
+    Box(modifier = Modifier.size(200.dp)) {
+        AsyncImage(
+            model = ImageRequest.Builder(LocalContext.current)
+                .data(imageUrl)
+                .listener(
+                    onStart = { isLoading = true },
+                    onSuccess = { _, _ -> isLoading = false },
+                    onError = { _, _ -> 
+                        isLoading = false
+                        isError = true
+                    }
+                )
+                .build(),
+            contentDescription = null,
+            modifier = Modifier.fillMaxSize()
+        )
+        
+        if (isLoading) {
+            CircularProgressIndicator(
+                modifier = Modifier.align(Alignment.Center)
+            )
+        }
+        
+        if (isError) {
+            Icon(
+                imageVector = Icons.Default.Error,
+                contentDescription = "Error loading image",
+                modifier = Modifier.align(Alignment.Center)
+            )
+        }
+    }
+}
+```
+
+**Using SubcomposeAsyncImage:**
+```kotlin
+@Composable
+fun ImageWithCustomStates(imageUrl: String) {
+    SubcomposeAsyncImage(
+        model = imageUrl,
+        loading = {
+            CircularProgressIndicator()
+        },
+        error = {
+            Icon(Icons.Default.BrokenImage, null)
+        },
+        contentDescription = null,
+        modifier = Modifier.size(200.dp)
+    )
+}
+```
+
+#### 7. Image Transformations
+```kotlin
+// Built-in transformations
+transformations(
+    CircleCropTransformation(),
+    RoundedCornersTransformation(radius = 16.dp.value),
+    BlurTransformation(context, radius = 15f),
+    GrayscaleTransformation()
+)
+
+// Custom transformation
+class CustomTransformation : Transformation {
+    override val cacheKey: String = "custom_transformation"
+    
+    override suspend fun transform(
+        input: Bitmap,
+        size: Size
+    ): Bitmap {
+        // Transform bitmap
+        return transformedBitmap
+    }
+}
+```
+
+#### 8. Caching Configuration
+```kotlin
+// Global ImageLoader configuration
+val imageLoader = ImageLoader.Builder(context)
+    .memoryCache {
+        MemoryCache.Builder(context)
+            .maxSizePercent(0.25) // 25% of app memory
+            .build()
+    }
+    .diskCache {
+        DiskCache.Builder()
+            .directory(context.cacheDir.resolve("image_cache"))
+            .maxSizeBytes(512 * 1024 * 1024) // 512 MB
+            .build()
+    }
+    .respectCacheHeaders(false) // Ignore HTTP cache headers
+    .build()
+
+// Set as singleton
+ImageLoader.invoke(imageLoader)
+```
+
+**Cache Policies:**
+```kotlin
+ImageRequest.Builder(context)
+    .data(url)
+    .memoryCachePolicy(CachePolicy.ENABLED)  // Cache in memory
+    .diskCachePolicy(CachePolicy.DISABLED)   // Don't cache on disk
+    .networkCachePolicy(CachePolicy.ENABLED) // Use HTTP cache
+    .build()
+```
+
+#### 9. Preloading Images
+```kotlin
+// Preload single image
+val imageLoader = context.imageLoader
+val request = ImageRequest.Builder(context)
+    .data(imageUrl)
+    .build()
+
+imageLoader.enqueue(request)
+
+// Preload multiple images
+suspend fun preloadImages(urls: List<String>) {
+    val imageLoader = context.imageLoader
+    urls.forEach { url ->
+        val request = ImageRequest.Builder(context)
+            .data(url)
+            .build()
+        imageLoader.execute(request)
+    }
+}
+```
+
+#### 10. Custom Image Sources
+```kotlin
+// Load from different sources
+AsyncImage(
+    model = "https://example.com/image.jpg",  // URL
+    // or
+    model = File("/path/to/image.jpg"),       // File
+    // or
+    model = R.drawable.image,                  // Resource
+    // or
+    model = contentUri,                        // Content URI
+    // or
+    model = byteArray,                         // ByteArray
+    contentDescription = null
+)
+```
+
+#### 11. GIF & SVG Support
+```kotlin
+// GIF
+dependencies {
+    implementation("io.coil-kt:coil-gif:2.5.0")
+}
+
+AsyncImage(
+    model = ImageRequest.Builder(context)
+        .data("https://example.com/animation.gif")
+        .decoderFactory(GifDecoder.Factory())
+        .build(),
+    contentDescription = null
+)
+
+// SVG
+dependencies {
+    implementation("io.coil-kt:coil-svg:2.5.0")
+}
+
+AsyncImage(
+    model = ImageRequest.Builder(context)
+        .data("https://example.com/vector.svg")
+        .decoderFactory(SvgDecoder.Factory())
+        .build(),
+    contentDescription = null
+)
+```
+
+#### 12. Crossfade Animation
+```kotlin
+AsyncImage(
+    model = ImageRequest.Builder(context)
+        .data(imageUrl)
+        .crossfade(true)        // Enable crossfade
+        .crossfade(300)         // Custom duration (ms)
+        .build(),
+    contentDescription = null
+)
+```
+
+#### 13. Image Size & Scaling
+```kotlin
+AsyncImage(
+    model = imageUrl,
+    contentDescription = null,
+    contentScale = ContentScale.Crop,       // Crop to fill
+    // ContentScale.Fit      - Fit inside
+    // ContentScale.FillBounds - Fill without aspect ratio
+    // ContentScale.FillHeight - Fill height
+    // ContentScale.FillWidth  - Fill width
+    // ContentScale.Inside     - Don't scale up
+    // ContentScale.None       - Original size
+    modifier = Modifier.size(200.dp)
+)
+```
+
+**Target Size:**
+```kotlin
+ImageRequest.Builder(context)
+    .data(imageUrl)
+    .size(800, 600)              // Specific size
+    .size(Size.ORIGINAL)         // Don't resize
+    .size(OriginalSize)          // Alias for Size.ORIGINAL
+    .precision(Precision.EXACT)  // Must be exact size
+    .build()
+```
+
+#### 14. Error Handling & Fallbacks
+```kotlin
+AsyncImage(
+    model = ImageRequest.Builder(context)
+        .data(imageUrl)
+        .placeholder(R.drawable.placeholder)  // While loading
+        .error(R.drawable.error)              // On error
+        .fallback(R.drawable.fallback)        // If data is null
+        .build(),
+    contentDescription = null
+)
+```
+
+#### 15. Lazy Loading in Lists
+```kotlin
+@Composable
+fun ImageList(images: List<String>) {
+    LazyColumn {
+        items(images) { imageUrl ->
+            AsyncImage(
+                model = ImageRequest.Builder(LocalContext.current)
+                    .data(imageUrl)
+                    .crossfade(true)
+                    .memoryCacheKey(imageUrl) // Custom cache key
+                    .build(),
+                contentDescription = null,
+                modifier = Modifier
+                    .fillMaxWidth()
+                    .height(200.dp)
+            )
+        }
+    }
+}
+```
+
+#### 16. Best Practices
+✅ Always provide `contentDescription` untuk accessibility
+✅ Use appropriate `ContentScale`
+✅ Enable crossfade untuk smooth transitions
+✅ Implement placeholder & error images
+✅ Configure caching appropriately
+✅ Use transformations sparingly (performance)
+✅ Preload images when possible
+✅ Resize images to display size
+✅ Handle loading states
+✅ Test dengan slow network
+
+#### 17. Coil vs Glide vs Picasso
+
+**Coil:**
+✅ Kotlin-first, coroutines
+✅ Jetpack Compose support
+✅ Modern API
+✅ Smaller library size
+❌ Newer, smaller ecosystem
+
+**Glide:**
+✅ Mature, battle-tested
+✅ Extensive features
+✅ Good performance
+❌ Java-first
+❌ More complex API
+
+**Picasso:**
+✅ Simple API
+✅ Reliable
+❌ Less maintained
+❌ Fewer features
+❌ Larger size
+
+#### 18. Hands-on Exercises
+- Build image gallery dengan Coil
+- Implement custom transformations
+- Setup caching strategy
+- Lazy loading dalam lists
+- Handle different image sources
+- Error handling & placeholders
+- Performance optimization
+
+---
